@@ -1,5 +1,6 @@
 package com.jobportal.JobPortal;
 
+import com.jobportal.JobPortal.dto.InterviewDTO;
 import com.jobportal.JobPortal.model.Application;
 import com.jobportal.JobPortal.model.Interview;
 import com.jobportal.JobPortal.model.Interview.InterviewOutcome;
@@ -17,7 +18,6 @@ import org.springframework.boot.test.context.SpringBootTest;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -53,91 +53,47 @@ public class InterviewServiceTest {
         interview.setOutcome(InterviewOutcome.PENDING);
     }
 
-    @Test // << scheduleInterview test
-    public void testScheduleInterview() {
-    	/*prepare the expected output*/
-    	when(applicationRepository.findById(1)).thenReturn(Optional.of(app));
-        when(interviewRepository.save(interview)).thenReturn(interview);
-        when(applicationRepository.save(any(Application.class))).thenReturn(app);
-
-        /*actual output*/
-        Interview scheduled = interviewService.scheduleInterview(1, interview);
-
-        assertEquals(app, scheduled.getApplication());
-        assertEquals(Status.INTERVIEW_SCHEDULED, app.getStatus());
-        verify(interviewRepository).save(interview);
-        verify(applicationRepository).save(app);
-    }
-
-    @Test // << updateInterview test
-    public void testUpdateInterview() {
-    	/*prepare the expected output*/
-    	when(interviewRepository.findById(1)).thenReturn(Optional.of(interview));
-        when(applicationRepository.findById(1)).thenReturn(Optional.of(app));
-        when(interviewRepository.save(any(Interview.class))).thenReturn(interview);
-
-        Interview input = new Interview();
-        input.setInterviewId(1);
-        input.setInterviewDate(LocalDate.from(LocalDateTime.now().plusDays(1)));
-        input.setInterviewLocation("Office");
-        input.setInterviewMode(Interview.InterviewMode.valueOf("OFFLINE"));
-
-        /*actual output*/
-        Interview updated = interviewService.updateInterview(input, 1);
-
-        assertEquals("Office", updated.getInterviewLocation());
-        assertEquals("OFFLINE", updated.getInterviewMode());
-        assertEquals(InterviewOutcome.PENDING, updated.getOutcome());
-        assertEquals(app, updated.getApplication());
-    }
-
-    @Test // << updateInterviewStatus test
-    public void testUpdateInterviewStatus() {
-    	/*prepare the expected output*/
-    	interview.setOutcome(InterviewOutcome.PENDING);
-        app.setStatus(Status.INTERVIEW_SCHEDULED);
+    @Test // << getInterviewById test
+    public void testGetInterviewById() {
         when(interviewRepository.findById(1)).thenReturn(Optional.of(interview));
-        when(interviewRepository.save(any(Interview.class))).thenReturn(interview);
-        when(applicationRepository.save(any(Application.class))).thenReturn(app);
 
-        /*actual output*/
-        Interview updated = interviewService.updateInterviewStatus(1, InterviewOutcome.INTERVIEW_COMPLETED_REJECTED);
+        Optional<Interview> actual = interviewService.getInterviewById(1);
 
-        assertEquals(InterviewOutcome.INTERVIEW_COMPLETED_REJECTED, updated.getOutcome());
-        assertEquals(Status.INTERVIEW_COMPLETED_REJECTED, app.getStatus());
+        assertTrue(actual.isPresent());
+        assertEquals(1, actual.get().getInterviewId());
+        verify(interviewRepository).findById(1);
     }
 
     @Test // << getInterviewsByApplicationId test
     public void testGetInterviewsByApplicationId() {
-    	/*prepare the expected output*/
-    	List<Interview> expected = Arrays.asList(interview);
-        when(interviewRepository.findByApplicationApplicationId(1)).thenReturn(expected);
+        when(interviewRepository.findByApplicationApplicationId(1)).thenReturn(List.of(interview));
 
-        /*actual output*/
-        List<Interview> actual = interviewService.getInterviewsByApplicationId(1);
+        List<InterviewDTO> actual = interviewService.getInterviewsByApplicationId(1);
 
-        assertEquals(expected, actual);
+        assertEquals(1, actual.size());
+        assertEquals("Zoom", actual.get(0).getInterviewLocation());
         verify(interviewRepository).findByApplicationApplicationId(1);
     }
 
-    @Test // << getInterviewById test
-    public void testGetInterviewById() {
-    	/*prepare the expected output*/
-    	when(interviewRepository.findById(1)).thenReturn(Optional.of(interview));
+    @Test // << updateInterview test
+    public void testUpdateInterview() {
+        when(interviewRepository.findById(1)).thenReturn(Optional.of(interview));
+        when(applicationRepository.findById(1)).thenReturn(Optional.of(app));
+        when(interviewRepository.save(any(Interview.class))).thenReturn(interview);
 
-        /*actual output*/
-        Interview actual = interviewService.getInterviewById(1);
+        Interview input = new Interview();
+        input.setInterviewDate(LocalDate.now().plusDays(1));
+        input.setInterviewLocation("Office");
+        input.setInterviewMode(Interview.InterviewMode.OFFLINE);
 
-        assertEquals(interview, actual);
+        Interview updated = interviewService.updateInterview(input, 1);
+
+        assertEquals("Office", updated.getInterviewLocation());
+        assertEquals(Interview.InterviewMode.OFFLINE, updated.getInterviewMode());
     }
 
-    @Test // << deleteInterview test
-    public void testDeleteInterview() {
-        // no return value to assert; just verify method call
-        interviewService.deleteInterview(1);
-        verify(interviewRepository).deleteById(1);
-    }
 
+    
     // After each test case, the objects used in them will get nullified and HEAP
     // memory will be free
     @AfterEach
